--- a/Style/Style.scss
+++ b/Style/Style.scss
@@ -14,6 +14,7 @@ body{
   color: #515151;
   font-size: 16px;
   margin: 0;
+  font-family: "Open sans", sans-serif;
 }
 
 
@@ -56,5 +57,45 @@ header {
     height: 31px;
     display: inline-block;
     cursor: pointer;
+  }
+}
+
+.swiper_block {
+  width: 100%;
+  background-image: url("/image/home/slider/slider_bg.jpg");
+  display: flex;
+  align-items: center;
+  background-repeat: no-repeat;
+}
+
+.swiper-pagination-bullet-active {
+  background: yellow;
+}
+.swiper-pagination-bullet {
+  background: dimgrey;
+}
+
+.swiper {
+
+  &_img {
+    width: 703px;
+    height: 815px;
+  }
+  &_content{
+    max-width: 640px;
+  }
+  &_title {
+    font-family: $boldText;
+    color: $mainColor;
+    font-size: 110px;
+  }
+  &_hr {
+    width: 200px;
+    background-color: grey;
+    margin: 20px 0;
+  }
+  &_text {
+    font-size: 16px;
+    font-weight: 500;
   }
 }
