--- a/Style/Style.css
+++ b/Style/Style.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+* h1, * h2, * h3, * h4, * p {
+  margin: 0;
+}
 
 body {
   background-color: white;
@@ -13,6 +16,10 @@ body {
 .container {
   max-width: 1150px;
   margin: 0 auto;
+}
+.container_fluid {
+  max-width: 1920px;
+  padding: 0 15px;
 }
 
 header {
@@ -65,12 +72,14 @@ header {
 }
 
 .swiper-pagination-bullet {
+  margin: 0 15px;
   background: dimgrey;
 }
 
 .swiper_img {
   width: 703px;
   height: 815px;
+  margin: 0 40px;
 }
 .swiper_content {
   max-width: 640px;
@@ -86,6 +95,79 @@ header {
   margin: 20px 0;
 }
 .swiper_text {
-  font-size: 16px;
   font-weight: 500;
+}
+
+.furniture_info {
+  justify-content: center;
+  text-align: center;
+  max-width: 730px;
+  margin: 0 auto;
+}
+.furniture_info_title {
+  color: #363838;
+  font-family: Montserrat, sans-serif;
+}
+.furniture_info_text {
+  font-weight: 700;
+}
+.furniture_info_hr {
+  background-color: grey;
+  width: 200px;
+  margin: 20px auto 15px;
+}
+.furniture_hr_img {
+  background-color: grey;
+  width: 200px;
+  margin: 15px auto 20px;
+}
+.furniture_content {
+  display: flex;
+  margin: 80px 0 100px;
+  max-width: 1920px;
+  justify-content: center;
+}
+.furniture_white {
+  transition: .9s;
+  left: 0;
+  top: 0;
+  position: absolute;
+  background-color: white;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+}
+.furniture_img_block {
+  margin: 0 10px;
+  cursor: pointer;
+  position: relative;
+}
+.furniture_img_hover {
+  opacity: 0;
+  transition: .5s;
+  width: 100%;
+  left: 0;
+  top: 40%;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+}
+.furniture_img_title {
+  font-family: Montserrat, sans-serif;
+  color: #363838;
+  font-size: 20px;
+}
+.furniture_img_text {
+  font-size: 14px;
+}
+
+.furniture_img_block:hover .furniture_white {
+  display: block;
+  opacity: .6;
+  transition: .9s;
+}
+.furniture_img_block:hover .furniture_img_hover {
+  display: block;
+  opacity: 1;
+  transition: .5s;
 }
