--- a/Style/Style.scss
+++ b/Style/Style.scss
@@ -6,7 +6,9 @@ $boldText: Montserrat, sans-serif;
 
 * {
   box-sizing: border-box;
-
+  h1,h2,h3,h4, p {
+    margin: 0;
+  }
 }
 
 body{
@@ -21,6 +23,10 @@ body{
 .container {
   max-width: 1150px;
   margin: 0 auto;
+  &_fluid{
+    max-width: 1920px;
+    padding: 0 15px;
+  }
 }
 
 header {
@@ -60,6 +66,9 @@ header {
   }
 }
 
+
+
+
 .swiper_block {
   width: 100%;
   background-image: url("/image/home/slider/slider_bg.jpg");
@@ -72,6 +81,7 @@ header {
   background: yellow;
 }
 .swiper-pagination-bullet {
+  margin: 0 15px;
   background: dimgrey;
 }
 
@@ -80,6 +90,7 @@ header {
   &_img {
     width: 703px;
     height: 815px;
+    margin: 0 40px;
   }
   &_content{
     max-width: 640px;
@@ -95,7 +106,94 @@ header {
     margin: 20px 0;
   }
   &_text {
-    font-size: 16px;
     font-weight: 500;
+  }
+}
+
+
+
+
+.furniture {
+
+  &_info {
+    justify-content: center;
+    text-align: center;
+    max-width: 730px;
+    margin: 0 auto;
+    &_title {
+      color: $mainColor;
+      font-family: $boldText;
+    }
+    &_text {
+      font-weight: 700;
+    }
+    &_hr {
+      background-color: grey;
+      width: 200px;
+      margin: 20px auto 15px;
+    }
+  }
+  &_hr_img {
+    background-color: grey;
+    width: 200px;
+    margin: 15px auto 20px;
+  }
+  &_content{
+    display: flex;
+    margin: 80px 0 100px;
+    max-width: 1920px;
+    justify-content: center;
+  }
+
+
+  &_white{
+    transition: .9s;
+    left: 0;
+    top: 0;
+    position: absolute;
+    background-color: white;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+
+  }
+  &_img {
+    &_block {
+      margin: 0 10px;
+      cursor: pointer;
+      position: relative;
+    }
+    &_hover {
+      opacity: 0;
+      transition: .5s;
+      width: 100%;
+      left: 0;
+      top: 40%;
+      justify-content: center;
+      text-align: center;
+      position: absolute;
+    }
+    &_title {
+      font-family: $boldText;
+      color: $mainColor;
+      font-size: 20px;
+    }
+    &_text {
+      font-size: 14px;
+
+    }
+  }
+}
+
+.furniture_img_block:hover {
+  .furniture_white, {
+    display: block;
+    opacity: .6;
+    transition: .9s;
+  }
+  .furniture_img_hover {
+    display: block;
+    opacity: 1;
+    transition: .5s;
   }
 }
