--- a/Style/Style.scss
+++ b/Style/Style.scss
@@ -13,19 +13,21 @@ $boldText: Montserrat, sans-serif;
 
 body{
   background-color: white;
-  color: #515151;
+  color: #5A5A5A;
   font-size: 16px;
   margin: 0;
   font-family: "Open sans", sans-serif;
 }
-
+.title {
+  font-family: $boldText;
+  color: $mainColor;
+}
 
 .container {
   max-width: 1150px;
   margin: 0 auto;
   &_fluid{
     max-width: 1920px;
-    padding: 0 15px;
   }
 }
 
@@ -96,8 +98,6 @@ header {
     max-width: 640px;
   }
   &_title {
-    font-family: $boldText;
-    color: $mainColor;
     font-size: 110px;
   }
   &_hr {
@@ -120,10 +120,6 @@ header {
     text-align: center;
     max-width: 730px;
     margin: 0 auto;
-    &_title {
-      color: $mainColor;
-      font-family: $boldText;
-    }
     &_text {
       font-weight: 700;
     }
@@ -132,11 +128,6 @@ header {
       width: 200px;
       margin: 20px auto 15px;
     }
-  }
-  &_hr_img {
-    background-color: grey;
-    width: 200px;
-    margin: 15px auto 20px;
   }
   &_content{
     display: flex;
@@ -174,9 +165,21 @@ header {
       position: absolute;
     }
     &_title {
-      font-family: $boldText;
-      color: $mainColor;
       font-size: 20px;
+      padding-bottom: 19px;
+      margin-bottom: 19px;
+      position: relative;
+    }
+    &_title::after {
+      background: grey;
+      width: 60%;
+      margin: 0 auto;
+      height: 1px;
+      content: "";
+      bottom: 0;
+      left: 0;
+      right: 0;
+      position: absolute;
     }
     &_text {
       font-size: 14px;
@@ -197,3 +200,121 @@ header {
     transition: .5s;
   }
 }
+
+
+
+
+
+.decor {
+  background-image: url("/image/home/decor/decor_bg.jpg");
+  background-repeat: no-repeat;
+  height: 100%;
+  &_content {
+    max-width: 540px;
+    padding: 170px 0 160px;
+    margin-right: 20px;
+  }
+  &_title {
+    font-size: 60px;
+    position: relative;
+    margin-bottom: 19px;
+    padding-bottom: 19px;
+    &::after {
+      background: grey;
+      width: 200px;
+      height: 1px;
+      content: "";
+      bottom: 0;
+      left: 0;
+      right: 0;
+      position: absolute;
+    }
+  }
+}
+
+
+.works_title {
+  font-size: 36px;
+  display: flex;
+  justify-content: center;
+  padding: 80px 0 20px;
+}
+
+.works_path {
+
+  &_content {
+    justify-content: center;
+
+  }
+  &_container {
+    display: flex;
+    align-items: flex-end;
+  }
+  &_img {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  &_box {
+    width: 50%;
+    position: relative;
+    &_after_line_standard::after, &_after_line_reverse::after {
+      height: 20px;
+      background: grey;
+      width: 2px;
+      content: "";
+      position: absolute;
+    }
+    &_after_line_standard::after{
+      left: 0;
+      bottom: 0;
+
+    }
+    &_after_line_reverse::after {
+      right: 50%;
+      top: 0;
+    }
+  }
+  &_block {
+    max-width: 270px;
+    position: relative;
+    margin: 35px 0;
+  }
+
+  &_line {
+    background: grey;
+    width: 100%;
+    height: 2px;
+    position: relative;
+
+    &::before , &::after {
+      content: "";
+      bottom: -4px;
+      width: 10px;
+      height: 10px;
+      background: #363636;
+      position: absolute;
+      border-radius: 5px;
+    }
+    
+    &::before {
+      left: 0;
+    }
+    &::after {
+      right: 0;
+      opacity: .8;
+    }
+  }
+  &_title {
+    padding: 5px 0 0 45px;
+    margin-bottom: 15px;
+  }
+}
+.works_right {
+  display: flex;
+  justify-content: right;
+}
+
+
+
+
