--- a/Style/Style.scss
+++ b/Style/Style.scss
@@ -99,12 +99,21 @@ header {
   }
   &_title {
     font-size: 110px;
+    position: relative;
+    padding-bottom: 19px;
+    margin-bottom: 19px;
+    &::after {
+      background: grey;
+      width: 200px;
+      height: 1px;
+      content: "";
+      bottom: 0;
+      left: 0;
+      right: 0;
+      position: absolute;
+    }
   }
-  &_hr {
-    width: 200px;
-    background-color: grey;
-    margin: 20px 0;
-  }
+
   &_text {
     font-weight: 500;
   }
@@ -123,10 +132,23 @@ header {
     &_text {
       font-weight: 700;
     }
-    &_hr {
-      background-color: grey;
-      width: 200px;
-      margin: 20px auto 15px;
+    &_title {
+      position: relative;
+      padding-bottom: 19px;
+      margin-bottom: 19px;
+      font-size: 36px;
+
+      &::after {
+        background: grey;
+        width: 200px;
+        height: 1px;
+        content: "";
+        bottom: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        margin: 0 auto;
+      }
     }
   }
   &_content{
