--- a/Style/Style.css
+++ b/Style/Style.css
@@ -46,7 +46,23 @@ header {
 .nav_block_content {
   color: #363838;
   text-decoration: none;
-  margin: 0 40px;
+  margin: 0 40px 5px;
+  line-height: 25px;
+}
+.nav_block_content:after {
+  transition: 0.3s ease-out;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #979797;
+  position: relative;
+  bottom: 0;
+  border-radius: 1px;
+  transform: scale(0, 1);
+}
+.nav_block_content:hover:after {
+  transform: scale(1, 1);
 }
 .nav_img {
   justify-self: center;
@@ -297,4 +313,234 @@ header {
 .works_right {
   display: flex;
   justify-content: right;
+}
+
+.works {
+  padding: 60px 0;
+}
+.works_nav {
+  justify-content: center;
+  align-items: center;
+  margin: 40px 0;
+  display: flex;
+}
+.works_nav_link {
+  opacity: .6;
+  color: #363838;
+  border: #363838 solid 1px;
+  border-radius: 18px;
+  padding: 8px 16px;
+  margin: 0 12px;
+  font-size: 14px;
+  background-color: transparent;
+  cursor: pointer;
+}
+.works_nav_link:hover {
+  opacity: 1;
+  transition: .2s;
+  border: #FFEF35 1px solid;
+  background-color: #FFEF35;
+}
+.works_nav_link .active {
+  opacity: 1;
+  border: #FFEF35;
+  background-color: #FFEF35;
+}
+.works_block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.works_img {
+  margin: 10px;
+}
+.works_small_block {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.ideas_blog {
+  padding-bottom: 60px;
+}
+.ideas_blog_inner {
+  text-align: center;
+}
+.ideas_blog_title {
+  font-size: 36px;
+  max-width: 430px;
+  margin: 0 auto;
+}
+.ideas_blog_block {
+  display: flex;
+  justify-content: center;
+}
+.ideas_blog_content {
+  max-width: 540px;
+  text-align: left;
+  margin: 40px 15px;
+}
+.ideas_blog_description {
+  display: flex;
+  margin: 20px 0;
+  font-size: 14px;
+  font-weight: 700;
+}
+.ideas_blog_description_author {
+  padding: 0 8px;
+  margin: 0 8px;
+  border-left: grey solid 1px;
+  border-right: grey solid 1px;
+}
+.ideas_blog_text {
+  font-size: 24px;
+}
+
+.footer {
+  text-align: center;
+}
+.footer_content {
+  background-color: #DFDFDF;
+  padding: 60px 0 80px;
+  text-align: left;
+}
+.footer_content_inner {
+  display: flex;
+  justify-content: space-between;
+}
+.footer_contact {
+  max-width: 480px;
+}
+.footer_contact_text {
+  margin: 15px 0;
+}
+.footer_contact_mail {
+  transition: .2s;
+  display: flex;
+  color: #363838;
+  font-family: Montserrat, sans-serif;
+  text-decoration: none;
+}
+.footer_contact_mail:hover {
+  transition: .2s;
+  color: white;
+}
+.footer_contact_mail_text {
+  padding-left: 15px;
+}
+.footer_contact_subscribe {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.footer_contact_subscribe_input {
+  padding: 10px 120px 10px 20px;
+  background-color: transparent;
+  border: 1px #363838 solid;
+  border-radius: 15px;
+}
+.footer_contact_subscribe_input:focus {
+  border: 1px #363838 solid;
+}
+.footer_contact_subscribe_btn {
+  background-color: #363838;
+  color: white;
+  padding: 5px 60px;
+  border: 2px #363838 solid;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: .2s;
+  font-weight: 700;
+}
+.footer_contact_subscribe_btn:hover {
+  box-shadow: 0 0 15px #363838;
+  transition: .2s;
+}
+.footer_social {
+  display: flex;
+  flex-direction: column;
+}
+.footer_social_block {
+  display: flex;
+  align-items: center;
+}
+.footer_social_link {
+  text-decoration: none;
+  color: #707070;
+  line-height: 35px;
+  padding-left: 10px;
+  font-weight: 700;
+}
+.footer_social_svg {
+  width: 15px;
+  height: 15px;
+}
+.footer_info {
+  display: flex;
+  flex-direction: column;
+}
+.footer_info_link {
+  line-height: 35px;
+  text-decoration: none;
+  color: #707070;
+  font-weight: 700;
+  transition: .2s;
+}
+.footer_info_link:hover {
+  color: #363838;
+  transition: .2s;
+}
+.footer_copyright {
+  margin: 0 auto;
+  background-color: #363838;
+  padding: 40px 0;
+}
+
+.facebook {
+  transition: all;
+}
+.facebook:hover .facebook_svg {
+  color: dodgerblue;
+}
+.facebook:hover #facebook {
+  fill: dodgerblue;
+}
+
+.inst {
+  transition: all;
+}
+.inst:hover .inst_svg {
+  color: #b92fc2;
+}
+.inst:hover #inst {
+  fill: #b92fc2;
+}
+
+.pinterest {
+  transition: all;
+}
+.pinterest:hover .pinterest_svg {
+  color: red;
+}
+.pinterest:hover #pinterest {
+  fill: red;
+}
+
+.whatsapp {
+  transition: all;
+}
+.whatsapp:hover .whatsapp_svg {
+  color: #1db41d;
+}
+.whatsapp:hover #whatsapp {
+  fill: #1db41d;
+}
+
+.youtube {
+  transition: all;
+}
+.youtube:hover .youtube_svg {
+  color: red;
+}
+.youtube:hover #youtube {
+  fill: red;
 }
