--- a/Style/About/About.css
+++ b/Style/About/About.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box; }
+  * h1, * h2, * h3, * h4, * p {
+    margin: 0; }
+
 #web-active:after {
   transform: scale(1, 1); }
 
@@ -68,17 +73,16 @@ header {
     display: inline-block;
     cursor: pointer; }
 
-.placeholder {
+.placeholder_text {
+  margin: 0 auto;
+  font-size: 60px;
+  width: 305px; }
+.placeholder_bg {
   margin: 15px 0 0 0;
   width: 100%;
   height: 100%;
-  background-image: url("/image/about/placeholder.jpg");
-  background-repeat: no-repeat;
+  background: url("/image/about/placeholder.jpg") no-repeat;
   padding: 160px 0; }
-  .placeholder_text {
-    margin: 0 auto;
-    font-size: 60px;
-    width: 305px; }
 
 .About_info_block {
   line-height: 1.6; }
@@ -104,7 +108,7 @@ header {
     padding: 5px 0; }
 
 .video {
-  padding: 80px 0;
+  margin: 80px 0;
   cursor: pointer; }
   .video a {
     max-width: 1920px; }
@@ -124,10 +128,279 @@ header {
     align-items: center;
     display: flex;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     transition: .3s; }
     .video_play_bg:hover {
       background-color: #1c1c1c;
       box-shadow: black 0 0 15px;
       transition: .3s; }
+
+.details_inner {
+  background: url("/image/about/chair_bg.jpg") no-repeat bottom;
+  display: flex; }
+.details_main {
+  max-width: 825px;
+  margin: 0 auto; }
+.details_block_title {
+  font-size: 36px;
+  margin-bottom: 19px;
+  padding-bottom: 19px;
+  position: relative; }
+  .details_block_title::after {
+    background: #979797;
+    width: 200px;
+    height: 2px;
+    content: "";
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    border-radius: 1px; }
+.details_block_text {
+  line-height: 1.7; }
+.details_graphic {
+  margin: 30px 0; }
+  .details_graphic_content {
+    display: flex;
+    justify-content: space-between; }
+    .details_graphic_content_title {
+      margin-bottom: 36px;
+      padding-bottom: 16px;
+      position: relative; }
+      .details_graphic_content_title::before {
+        background: #ffff;
+        width: 823px;
+        height: 2px;
+        content: "";
+        bottom: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        border-radius: 1px; }
+
+#details_line_80::after {
+  background: #363636;
+  width: 700px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px; }
+
+#details_line_70::after {
+  background: #363636;
+  width: 560px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px; }
+
+#details_line_75::after {
+  background: #363636;
+  width: 640px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px; }
+
+#details_line_40::after {
+  background: #363636;
+  width: 300px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px; }
+
+.partners {
+  padding: 10px 0; }
+  .partners_block {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .partners_block_img {
+      margin: 0 34px; }
+
+.furniture_content {
+  display: flex;
+  margin: 80px 0 100px;
+  max-width: 1920px;
+  justify-content: center; }
+.furniture_white {
+  transition: .9s;
+  left: 0;
+  top: 0;
+  position: absolute;
+  background-color: white;
+  opacity: 0;
+  width: 100%;
+  height: 100%; }
+.furniture_img_block {
+  margin: 0 10px;
+  cursor: pointer;
+  position: relative; }
+.furniture_img_hover {
+  opacity: 0;
+  transition: .5s;
+  width: 100%;
+  left: 0;
+  top: 40%;
+  justify-content: center;
+  text-align: center;
+  position: absolute; }
+.furniture_img_title {
+  font-size: 20px;
+  padding-bottom: 19px;
+  margin-bottom: 19px;
+  position: relative; }
+.furniture_img_title::after {
+  background: grey;
+  width: 60%;
+  margin: 0 auto;
+  height: 1px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute; }
+.furniture_img_text {
+  font-size: 14px; }
+
+.furniture_img_block:hover .furniture_white {
+  display: block;
+  opacity: .6;
+  transition: .9s; }
+.furniture_img_block:hover .furniture_img_hover {
+  display: block;
+  opacity: 1;
+  transition: .5s; }
+
+.footer {
+  text-align: center; }
+  .footer_content {
+    background-color: #DFDFDF;
+    padding: 60px 0 80px;
+    text-align: left; }
+    .footer_content_inner {
+      display: flex;
+      justify-content: space-between; }
+  .footer_contact {
+    max-width: 480px; }
+    .footer_contact_text {
+      margin: 15px 0; }
+    .footer_contact_mail {
+      transition: .2s;
+      display: flex;
+      color: #363838;
+      font-family: Montserrat, sans-serif;
+      text-decoration: none; }
+      .footer_contact_mail:hover {
+        transition: .2s;
+        color: white; }
+      .footer_contact_mail_text {
+        padding-left: 15px; }
+    .footer_contact_subscribe {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px; }
+      .footer_contact_subscribe_input {
+        padding: 10px 120px 10px 20px;
+        background-color: transparent;
+        border: 1px #363838 solid;
+        border-radius: 15px; }
+        .footer_contact_subscribe_input:focus {
+          border: 1px #363838 solid; }
+      .footer_contact_subscribe_btn {
+        background-color: #363838;
+        color: white;
+        padding: 5px 60px;
+        border: 2px #363838 solid;
+        border-radius: 15px;
+        cursor: pointer;
+        transition: .2s;
+        font-weight: 700; }
+        .footer_contact_subscribe_btn:hover {
+          box-shadow: 0 0 15px #363838;
+          transition: .2s; }
+  .footer_social {
+    display: flex;
+    flex-direction: column; }
+    .footer_social_block {
+      display: flex;
+      align-items: center;
+      margin: 2px 0; }
+    .footer_social_link {
+      text-decoration: none;
+      color: #707070;
+      line-height: 35px;
+      padding-left: 10px;
+      font-weight: 700;
+      transition: .2s; }
+    .footer_social_svg {
+      width: 15px;
+      height: 15px; }
+  .footer_info {
+    display: flex;
+    flex-direction: column; }
+    .footer_info_link {
+      line-height: 35px;
+      text-decoration: none;
+      color: #707070;
+      font-weight: 700;
+      transition: .2s; }
+      .footer_info_link:hover {
+        color: #363838;
+        transition: .2s; }
+  .footer_copyright {
+    margin: 0 auto;
+    background-color: #363838;
+    padding: 40px 0; }
+
+.facebook {
+  transition: all; }
+  .facebook:hover .facebook_svg {
+    color: dodgerblue; }
+  .facebook:hover #facebook {
+    fill: dodgerblue; }
+
+.inst {
+  transition: all; }
+  .inst:hover .inst_svg {
+    color: #b92fc2; }
+  .inst:hover #inst {
+    fill: #b92fc2; }
+
+.pinterest {
+  transition: all; }
+  .pinterest:hover .pinterest_svg {
+    color: red; }
+  .pinterest:hover #pinterest {
+    fill: red; }
+
+.whatsapp {
+  transition: all; }
+  .whatsapp:hover .whatsapp_svg {
+    color: #1db41d; }
+  .whatsapp:hover #whatsapp {
+    fill: #1db41d; }
+
+.youtube {
+  transition: all; }
+  .youtube:hover .youtube_svg {
+    color: red; }
+  .youtube:hover #youtube {
+    fill: red; }
