--- a/Style/About/About.scss
+++ b/Style/About/About.scss
@@ -4,6 +4,13 @@ $contentColor: #707070;
 $boldText: Montserrat, sans-serif;
 
 
+* {
+  box-sizing: border-box;
+  h1,h2,h3,h4, p {
+    margin: 0;
+  }
+}
+
 
 #web-active:after {
   transform: scale(1, 1)
@@ -89,18 +96,21 @@ header {
 }
 
 .placeholder {
-  margin: 15px 0 0 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("/image/about/placeholder.jpg");
-  background-repeat: no-repeat;
-  padding: 160px 0;
+
   &_text {
     margin: 0 auto;
     font-size: 60px;
     width: 305px;
   }
+  &_bg {
+    margin: 15px 0 0 0;
+    width: 100%;
+    height: 100%;
+    background: url("/image/about/placeholder.jpg") no-repeat;
+    padding: 160px 0;
+  }
 }
+
 
 
 .About_info {
@@ -135,7 +145,7 @@ header {
 }
 
 .video {
-  padding: 80px 0;
+  margin: 80px 0;
   cursor: pointer;
 
   a {
@@ -160,8 +170,11 @@ header {
     align-items: center;
     display: flex;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     transition: .3s;
     &:hover {
       background-color: #1c1c1c;
@@ -172,3 +185,383 @@ header {
 }
 
 
+.details {
+
+
+  &_inner {
+    background: url("/image/about/chair_bg.jpg") no-repeat bottom;
+    display: flex;
+  }
+  &_main {
+    max-width: 825px;
+    margin: 0 auto;
+  }
+
+
+  &_img {
+
+  }
+
+  &_block {
+
+    &_title {
+      font-size: 36px;
+      margin-bottom: 19px;
+      padding-bottom: 19px;
+      position: relative;
+      &::after {
+        background: #979797;
+        width: 200px;
+        height: 2px;
+        content: "";
+        bottom: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        border-radius: 1px;
+      }
+    }
+    &_text {
+      line-height: 1.7;
+    }
+  }
+
+  &_graphic {
+    margin: 30px 0;
+
+    &_content {
+      display: flex;
+      justify-content: space-between;
+
+      &_title {
+        margin-bottom: 36px;
+        padding-bottom: 16px;
+        position: relative;
+
+        &::before {
+          background: #ffff;
+          width: 823px;
+          height: 2px;
+          content: "";
+          bottom: 0;
+          left: 0;
+          right: 0;
+          position: absolute;
+          border-radius: 1px;
+        }
+      }
+    }
+  }
+}
+#details_line_80::after {
+  background: #363636;
+  width: 700px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px;
+}
+#details_line_70::after {
+  background: #363636;
+  width: 560px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px;
+}
+#details_line_75::after {
+  background: #363636;
+  width: 640px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px;
+}
+#details_line_40::after {
+  background: #363636;
+  width: 300px;
+  height: 2px;
+  content: "";
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  border-radius: 1px;
+}
+
+
+.partners {
+  padding: 10px 0;
+
+  &_block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &_img {
+      margin: 0 34px;
+    }
+  }
+}
+
+
+
+.furniture {
+
+  &_content{
+    display: flex;
+    margin: 80px 0 100px;
+    max-width: 1920px;
+    justify-content: center;
+  }
+
+
+  &_white{
+    transition: .9s;
+    left: 0;
+    top: 0;
+    position: absolute;
+    background-color: white;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+
+  }
+  &_img {
+    &_block {
+      margin: 0 10px;
+      cursor: pointer;
+      position: relative;
+    }
+    &_hover {
+      opacity: 0;
+      transition: .5s;
+      width: 100%;
+      left: 0;
+      top: 40%;
+      justify-content: center;
+      text-align: center;
+      position: absolute;
+    }
+    &_title {
+      font-size: 20px;
+      padding-bottom: 19px;
+      margin-bottom: 19px;
+      position: relative;
+    }
+    &_title::after {
+      background: grey;
+      width: 60%;
+      margin: 0 auto;
+      height: 1px;
+      content: "";
+      bottom: 0;
+      left: 0;
+      right: 0;
+      position: absolute;
+    }
+    &_text {
+      font-size: 14px;
+
+    }
+  }
+}
+
+.furniture_img_block:hover {
+  .furniture_white, {
+    display: block;
+    opacity: .6;
+    transition: .9s;
+  }
+  .furniture_img_hover {
+    display: block;
+    opacity: 1;
+    transition: .5s;
+  }
+}
+
+
+
+
+
+
+.footer {
+  text-align: center;
+
+  &_content {
+    background-color: #DFDFDF;
+    padding: 60px 0 80px;
+    text-align: left;
+
+    &_inner {
+      display: flex;
+      justify-content: space-between;
+
+    }
+  }
+
+  &_contact {
+    max-width: 480px;
+
+    &_text {
+      margin: 15px 0;
+    }
+
+    &_mail {
+      transition: .2s;
+      display: flex;
+      color: $mainColor;
+      font-family: $boldText;
+      text-decoration: none;
+
+      &:hover {
+        transition: .2s;
+        color: white;
+      }
+
+      &_text {
+        padding-left: 15px;
+      }
+    }
+
+    &_subscribe {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+
+      &_input {
+        padding: 10px 120px 10px 20px;
+        background-color: transparent;
+        border: 1px $mainColor solid;
+        border-radius: 15px;
+
+        &:focus {
+          border: 1px $mainColor solid;
+        }
+      }
+
+      &_btn {
+        background-color: $mainColor;
+        color: white;
+        padding: 5px 60px;
+        border: 2px $mainColor solid;
+        border-radius: 15px;
+        cursor: pointer;
+        transition: .2s;
+        font-weight: 700;
+
+        &:hover {
+          box-shadow: 0 0 15px $mainColor;
+          transition: .2s;
+        }
+      }
+    }
+  }
+
+
+  &_social {
+    display: flex;
+
+    flex-direction: column;
+
+    &_block {
+      display: flex;
+      align-items: center;
+      margin: 2px 0;
+    }
+
+    &_link {
+      text-decoration: none;
+      color: #707070;
+      line-height: 35px;
+      padding-left: 10px;
+      font-weight: 700;
+      transition: .2s;
+    }
+
+    &_svg {
+      width: 15px;
+      height: 15px;
+    }
+  }
+
+  &_info {
+    display: flex;
+    flex-direction: column;
+
+    &_link {
+      line-height: 35px;
+      text-decoration: none;
+      color: #707070;
+      font-weight: 700;
+      transition: .2s;
+
+      &:hover {
+        color: $mainColor;
+        transition: .2s;
+      }
+    }
+  }
+
+
+
+  &_copyright {
+    margin: 0 auto;
+    background-color: $mainColor;
+    padding: 40px 0;
+  }
+}
+
+.facebook {
+  transition: all;
+  &:hover .facebook_svg {
+    color: dodgerblue;
+  }
+  &:hover #facebook {
+    fill: dodgerblue;
+  }
+}
+.inst {
+  transition: all;
+  &:hover .inst_svg {
+    color: #b92fc2;
+  }
+  &:hover #inst {
+    fill: #b92fc2;
+  }
+}
+.pinterest {
+  transition: all;
+  &:hover .pinterest_svg {
+    color: red;
+  }
+  &:hover #pinterest {
+    fill: red;
+  }
+}
+.whatsapp {
+  transition: all;
+  &:hover .whatsapp_svg {
+    color: #1db41d;
+  }
+  &:hover #whatsapp {
+    fill: #1db41d;
+  }
+}
+.youtube {
+  transition: all;
+  &:hover .youtube_svg {
+    color: red;
+  }
+  &:hover #youtube {
+    fill: red;
+  }
+}
