--- a/Style/Home/Home.css
+++ b/Style/Home/Home.css
@@ -18,7 +18,8 @@ body {
   max-width: 1110px;
   margin: 0 auto; }
   .container_fluid {
-    max-width: 1920px; }
+    max-width: 1920px;
+    margin: 0 auto; }
 
 header {
   padding: 20px 0;
@@ -177,28 +178,28 @@ header {
   opacity: 1;
   transition: .5s; }
 
-.decor {
-  background-image: url("/image/home/decor/decor_bg.jpg");
-  background-repeat: no-repeat;
+.decor_inner {
+  background: url("/image/home/decor/decor_bg.jpg") no-repeat;
+  width: 100%;
   height: 100%; }
-  .decor_content {
-    max-width: 540px;
-    padding: 170px 0 160px;
-    margin-right: 20px; }
-  .decor_title {
-    font-size: 60px;
-    position: relative;
-    margin-bottom: 19px;
-    padding-bottom: 19px; }
-    .decor_title::after {
-      background: grey;
-      width: 200px;
-      height: 1px;
-      content: "";
-      bottom: 0;
-      left: 0;
-      right: 0;
-      position: absolute; }
+.decor_content {
+  max-width: 540px;
+  padding: 170px 0 160px;
+  margin-left: 25%; }
+.decor_title {
+  font-size: 60px;
+  position: relative;
+  margin-bottom: 19px;
+  padding-bottom: 19px; }
+  .decor_title::after {
+    background: grey;
+    width: 200px;
+    height: 1px;
+    content: "";
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute; }
 
 .works_title {
   font-size: 36px;
