--- a/Style/Home/Home.scss
+++ b/Style/Home/Home.scss
@@ -28,6 +28,7 @@ body{
   margin: 0 auto;
   &_fluid{
     max-width: 1920px;
+    margin: 0 auto;
   }
 }
 
@@ -243,13 +244,17 @@ header {
 
 
 .decor {
-  background-image: url("/image/home/decor/decor_bg.jpg");
-  background-repeat: no-repeat;
-  height: 100%;
+
+  &_inner {
+    background: url("/image/home/decor/decor_bg.jpg") no-repeat;
+    width: 100%;
+    height: 100%;
+  }
   &_content {
     max-width: 540px;
     padding: 170px 0 160px;
-    margin-right: 20px;
+    margin-left: 25%;
+
   }
   &_title {
     font-size: 60px;
