--- a/Style/Gallery/Gallery.css
+++ b/Style/Gallery/Gallery.css
@@ -73,221 +73,47 @@ header {
   background: #f2f2f2;
   padding: 14px 405px; }
 
-.placeholder_text {
-  margin: 0 auto;
-  font-size: 60px;
-  width: 305px; }
-.placeholder_bg {
-  margin: 15px 0 0 0;
-  width: 100%;
-  height: 100%;
-  background: url("/image/about/placeholder.jpg") no-repeat;
-  padding: 160px 0; }
-
-.About_info_block {
-  line-height: 1.6; }
-.About_info_title {
-  font-size: 36px;
-  margin-bottom: 19px;
-  padding-bottom: 19px;
-  max-width: 830px;
-  position: relative; }
-  .About_info_title::after {
-    background: grey;
-    width: 200px;
-    height: 2px;
-    content: "";
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute; }
-.About_info_text {
-  margin-left: 285px;
-  font-size: 16px; }
-  .About_info_text p {
-    padding: 5px 0; }
-
-.video {
-  margin: 80px 0;
-  cursor: pointer; }
-  .video a {
-    max-width: 1920px; }
-  .video_block {
-    position: relative;
-    width: 100%; }
-  .video_play_button {
-    margin-left: 5px; }
-  .video_img {
-    width: 100%; }
-  .video_play_bg {
-    width: 80px;
-    height: 80px;
-    background-color: rgba(54, 54, 54, 0.4);
-    border-radius: 40px;
+.work {
+  padding: 60px 0; }
+  .work_nav {
     justify-content: center;
     align-items: center;
-    display: flex;
-    position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    transition: .3s; }
-    .video_play_bg:hover {
-      background-color: #1c1c1c;
-      box-shadow: black 0 0 15px;
-      transition: .3s; }
-
-.details_inner {
-  background: url("/image/about/chair_bg.jpg") no-repeat bottom;
-  display: flex; }
-.details_main {
-  max-width: 825px;
-  margin: 0 auto; }
-.details_block_title {
-  font-size: 36px;
-  margin-bottom: 19px;
-  padding-bottom: 19px;
-  position: relative; }
-  .details_block_title::after {
-    background: #979797;
-    width: 200px;
-    height: 2px;
-    content: "";
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    border-radius: 1px; }
-.details_block_text {
-  line-height: 1.7; }
-.details_graphic {
-  margin: 30px 0; }
-  .details_graphic_content {
-    display: flex;
-    justify-content: space-between; }
-    .details_graphic_content_title {
-      margin-bottom: 36px;
-      padding-bottom: 16px;
-      position: relative; }
-      .details_graphic_content_title::before {
-        background: #ffff;
-        width: 823px;
-        height: 2px;
-        content: "";
-        bottom: 0;
-        left: 0;
-        right: 0;
-        position: absolute;
-        border-radius: 1px; }
-
-#details_line_80::after {
-  background: #363636;
-  width: 700px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-#details_line_70::after {
-  background: #363636;
-  width: 560px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-#details_line_75::after {
-  background: #363636;
-  width: 640px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-#details_line_40::after {
-  background: #363636;
-  width: 300px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-.partners {
-  padding: 10px 0; }
-  .partners_block {
-    display: flex;
+    margin: 40px 0;
+    display: flex; }
+    .work_nav_link {
+      opacity: .6;
+      color: #363838;
+      border: #363838 solid 1px;
+      border-radius: 18px;
+      padding: 8px 16px;
+      margin: 0 12px;
+      font-size: 14px;
+      background-color: transparent;
+      cursor: pointer;
+      transition: .2s; }
+      .work_nav_link:hover {
+        opacity: 1;
+        transition: .2s;
+        border: #FFEF35 1px solid;
+        background-color: #FFEF35; }
+      .work_nav_link.active {
+        transition: .5s;
+        opacity: 1;
+        border: #FFEF35;
+        background-color: #FFEF35; }
+  .work_container {
+    display: flex; }
+  .work_block {
+    display: none;
     align-items: center;
     justify-content: center; }
-    .partners_block_img {
-      margin: 0 34px; }
-
-.furniture_content {
-  display: flex;
-  margin: 80px 0 100px;
-  max-width: 1920px;
-  justify-content: center; }
-.furniture_white {
-  transition: .9s;
-  left: 0;
-  top: 0;
-  position: absolute;
-  background-color: white;
-  opacity: 0;
-  width: 100%;
-  height: 100%; }
-.furniture_img_block {
-  margin: 0 10px;
-  cursor: pointer;
-  position: relative; }
-.furniture_img_hover {
-  opacity: 0;
-  transition: .5s;
-  width: 100%;
-  left: 0;
-  top: 40%;
-  justify-content: center;
-  text-align: center;
-  position: absolute; }
-.furniture_img_title {
-  font-size: 20px;
-  padding-bottom: 19px;
-  margin-bottom: 19px;
-  position: relative; }
-.furniture_img_title::after {
-  background: grey;
-  width: 60%;
-  margin: 0 auto;
-  height: 1px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute; }
-.furniture_img_text {
-  font-size: 14px; }
-
-.furniture_img_block:hover .furniture_white {
-  display: block;
-  opacity: .6;
-  transition: .9s; }
-.furniture_img_block:hover .furniture_img_hover {
-  display: block;
-  opacity: 1;
-  transition: .5s; }
+    .work_block.active {
+      display: block; }
+  .work_img {
+    margin: 10px; }
+  .work_small_block {
+    display: grid;
+    grid-template-columns: auto auto; }
 
 .footer {
   text-align: center; }
