--- a/Style/Home/Home.css
+++ b/Style/Home/Home.css
@@ -261,14 +261,14 @@ header {
   display: flex;
   justify-content: right; }
 
-.works {
+.work {
   padding: 60px 0; }
-  .works_nav {
+  .work_nav {
     justify-content: center;
     align-items: center;
     margin: 40px 0;
     display: flex; }
-    .works_nav_link {
+    .work_nav_link {
       opacity: .6;
       color: #363838;
       border: #363838 solid 1px;
@@ -279,25 +279,25 @@ header {
       background-color: transparent;
       cursor: pointer;
       transition: .2s; }
-      .works_nav_link:hover {
+      .work_nav_link:hover {
         opacity: 1;
         transition: .2s;
         border: #FFEF35 1px solid;
         background-color: #FFEF35; }
-      .works_nav_link.active {
+      .work_nav_link.active {
         transition: .5s;
         opacity: 1;
         border: #FFEF35;
         background-color: #FFEF35; }
-  .works_block {
+  .work_block {
     display: none;
     align-items: center;
     justify-content: center; }
-    .works_block.active {
+    .work_block.active {
       display: flex; }
-  .works_img {
+  .work_img {
     margin: 10px; }
-  .works_small_block {
+  .work_small_block {
     display: grid;
     grid-template-columns: auto auto; }
 
