--- a/Style/Single_post/Single_post.scss
+++ b/Style/Single_post/Single_post.scss
@@ -136,10 +136,8 @@ header {
   }
 
   &_quote {
-    background: #f2f2f2;
-    text-align: center;
-    padding: 54px 64px;
-    margin: 72px 0 82px;
+    text-align: left;
+    margin: 40px 30px;
     &_text {
       font-size: 24px;
       padding-bottom: 19px;
@@ -155,77 +153,184 @@ header {
         background: #979797;
         position: absolute;
         border-radius: 1px;
-        right: 0;
         left: 0;
         bottom: 0;
-        margin: 0 auto;
       }
     }
   }
 
-
-  &_video {
-    margin: 80px 0;
-    cursor: pointer;
-
-    a {
-      max-width: 1920px;
+  &_tags {
+    margin: 50px 0;
+    &_title {
+      font-size: 18px;
+      margin-bottom: 10px;
     }
-    &_block {
-      position: relative;
-      width: 100%;
-    }
-    &_play_button {
-      margin-left: 5px;
-    }
-    &_img {
-      width: 100%;
-    }
-    &_play_bg {
-      width: 80px;
-      height: 80px;
-      background-color: rgba(54,54,54, 0.4);
-      border-radius: 40px;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-      position: absolute;
-      margin: auto;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
+    &_link {
+      text-decoration: none;
+      color: #8F8D8D;
+      border: 1px solid #8F8D8D;
+      border-radius: 30px;
+      padding: 4px 16px;
+      margin: 4px;
+      display: inline-block;
       transition: .3s;
       &:hover {
-        background-color: #1c1c1c;
-        box-shadow: black 0 0 15px;
         transition: .3s;
+        color: #363636;
+        border: 1px solid #FFEF35;
+        background-color: #FFEF35;
       }
     }
   }
 
-  &_swiper {
-    margin: 50px 0;
-  }
-
-  &_page_number {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &_arrow {
-      cursor: pointer;
-      margin: 0 12px;
-      &_disable {
-        opacity: 0;
-        cursor: default;
+  &_previous {
+    position: relative;
+    margin: 40px 0;
+    padding: 40px 0;
+    &::before {
+      content: "";
+      width: 100%;
+      background-color: #DFDFDF;
+      height: 1px;
+      position: absolute;
+      top: 0;
+    }
+    &::after {
+      content: "";
+      width: 100%;
+      background-color: #DFDFDF;
+      height: 1px;
+      position: absolute;
+      bottom: 0;
+    }
+    &_content {
+      display: flex;
+      justify-content: space-between;
+    }
+    &_block {
+      max-width: 260px;
+      &_right {
+        text-align: right;
+        margin-right: 40px;
+      }
+      &_left {
+        text-align: left;
+        margin-left: 40px;
       }
     }
-    &_number {
+    &_text {
       color: #707070;
-      margin: 0 12px;
-      text-decoration: none;
-      &_active {
-        color: $mainColor;
+    }
+  }
+
+
+  &_comments {
+
+    &_title {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    &_author {
+      position: absolute;
+      left: 0;
+      top: 0;
+      margin: 10px;
+    }
+    &_content {
+      position: relative;
+      &_block {
+        margin-left: 90px;
+        &_text {
+          font-size: 16px;
+          max-width: 650px;
+        }
+      }
+
+
+      &_author {
+        &_info {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+        &_block {
+          display: grid;
+          margin: 15px 0;
+        }
+        &_name {
+          color: #363636;
+          font-size: 16px;
+          text-decoration: none;
+          font-weight: 700;
+          font-family: Montserrat, sans-serif;
+          transition: .3s;
+          &:hover {
+            transition: .3s;
+            opacity: .7;
+          }
+        }
+        &_date {
+          color: #A1A1A1;
+        }
+
+
+        &_reply {
+          color: #707070;
+        }
+
+      }
+    }
+  }
+
+  &_comment {
+    margin: 20px 0;
+    &_title {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+    &_input {
+      display: grid;
+
+      &_label {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      &_checkbox_label {
+        margin: 15px 0 20px;
+      }
+      &_text {
+        border: 1px grey solid;
+        border-radius: 20px;
+        width: 730px;
+        height: 125px;
+        padding: 15px 25px 40px 20px;
+        font-size: 16px;
+        &:focus {
+          color: #363636;
+          border: none;
+        }
+      }
+      &_info {
+        border: 1px grey solid;
+        border-radius: 20px;
+        width: 360px;
+        padding: 10px 15px;
+        &:focus {
+          color: #363636;
+          border: none;
+        }
+      }
+      &_checkbox {
+
+      }
+      &_submit {
+        color: white;
+        background-color: #363636;
+        font-size: 16px;
+        padding: 10px 50px;
+        border: #363636 1px solid;
+        border-radius: 20px;
         font-weight: 600;
       }
     }
@@ -290,9 +395,13 @@ header {
       }
       &_text {
         color: $mainColor;
-
         line-height: 1.5;
         text-decoration: none;
+        transition: .3s;
+        &:hover {
+          transition: .3s;
+          opacity: .5;
+        }
       }
       &_date {
         color: #A1A1A1;
@@ -369,33 +478,33 @@ header {
   }
 
 }
-
-
+textarea {
+  resize: none;
+}
 
 
 .swiper {
-  align-items: center;
-  &-custom-button-next {
-    cursor: pointer;
-    top: 50%;
-    right: 16px;
-    position: absolute;
-    z-index: 9999;
+
+  &-wrapper {
+    position: relative;
   }
-  &-custom-button-prev {
+  &-custom-button {
+    color: #363636;
     cursor: pointer;
     position: absolute;
-    left: 16px;
-    top: 50%;
-    z-index: 9999;
-  }
-  &_arrow {
-    padding: 10px;
+    z-index: 999;
+    &-next {
+      right: 0;
+      top: 25%;
+    }
+    &-prev {
+      left: 0;
+      top: 15%;
+      transform: rotate(180deg);
+    }
   }
 }
-#swiper_arrow_prev {
-  transform: rotate(180deg);
-}
+
 
 
 
