--- a/Style/Blog/Blog.scss
+++ b/Style/Blog/Blog.scss
@@ -3,6 +3,13 @@ $contentColor: #707070;
 
 $boldText: Montserrat, sans-serif;
 
+ul {
+  padding: 0;
+}
+li::marker {
+  content: "";
+}
+
 
 * {
   box-sizing: border-box;
@@ -90,9 +97,21 @@ header {
   }
 }
 .breadcrumbs {
+  width: 100%;
   font-size: 14px;
   background: #f2f2f2;
-  padding: 14px 405px;
+  &_list {
+    display: flex;
+    padding: 4px 0;
+  }
+  &_item {
+
+  }
+  &_link {
+    text-decoration: none;
+    color: #5A5A5A;
+    padding: 0 2px;
+  }
 }
 
 
@@ -239,7 +258,7 @@ header {
       padding: 8px 40px 8px 18px;
       border-radius: 50px;
       width: 350px;
-      border: 1px solid #363636;
+      border: 1px solid $mainColor;
     }
     &_label {
       display: flex;
@@ -334,7 +353,7 @@ header {
         transition: .3s;
         &:hover {
           transition: .3s;
-          color: #363636;
+          color: $mainColor;
           border: 1px solid #FFEF35;
           background-color: #FFEF35;
         }
