--- a/Style/Contact/Contact.css
+++ b/Style/Contact/Contact.css
@@ -89,175 +89,139 @@ header {
     color: #5A5A5A;
     padding: 0 2px; }
 
-.placeholder {
-  position: relative; }
-  .placeholder_text {
-    margin: 0 auto;
-    font-size: 60px;
-    width: 305px; }
-  .placeholder_bg {
-    margin: 15px 0 0 0;
-    width: 100%;
-    height: 100%;
-    background: url("/image/about/placeholder.jpg") no-repeat;
-    padding: 160px 0; }
-
-.About_info_block {
-  line-height: 1.6; }
-.About_info_title {
-  font-size: 36px;
-  margin-bottom: 19px;
-  padding-bottom: 19px;
-  max-width: 830px;
-  position: relative; }
-  .About_info_title::after {
-    background: grey;
-    width: 200px;
-    height: 2px;
-    content: "";
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute; }
-.About_info_text {
-  margin-left: 285px;
-  font-size: 16px; }
-  .About_info_text p {
-    padding: 5px 0; }
-
-.video {
-  margin: 80px 0;
-  cursor: pointer; }
-  .video a {
-    max-width: 1920px; }
-  .video_block {
+.Contact {
+  margin: 50px 0 60px; }
+  .Contact_title {
+    font-size: 36px;
     position: relative;
-    width: 100%; }
-  .video_play_button {
-    margin-left: 5px; }
-  .video_img {
-    width: 100%; }
-  .video_play_bg {
-    width: 80px;
-    height: 80px;
-    background-color: rgba(54, 54, 54, 0.4);
-    border-radius: 40px;
-    justify-content: center;
-    align-items: center;
+    padding-bottom: 19px;
+    margin-bottom: 19px; }
+    .Contact_title::after {
+      content: "";
+      width: 200px;
+      height: 2px;
+      background-color: grey;
+      position: absolute;
+      bottom: 0;
+      left: 0; }
+  .Contact_content {
+    margin-left: 280px; }
+  .Contact_text {
+    color: #A1A1A1;
+    line-height: 1.7; }
+  .Contact_info_block {
+    margin: 20px 0; }
+  .Contact_info_mail {
+    margin: 20px 0;
+    transition: .2s;
     display: flex;
-    position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    transition: .3s; }
-    .video_play_bg:hover {
-      background-color: #1c1c1c;
-      box-shadow: black 0 0 15px;
-      transition: .3s; }
+    color: #363838;
+    font-family: Montserrat, sans-serif;
+    text-decoration: none; }
+    .Contact_info_mail:hover {
+      transition: .2s;
+      color: grey; }
+    .Contact_info_mail_text {
+      padding-left: 15px; }
+  .Contact_info_subscribe {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px; }
+    .Contact_info_subscribe_input {
+      padding: 10px 120px 10px 20px;
+      background-color: transparent;
+      border: 1px #363838 solid;
+      border-radius: 15px; }
+      .Contact_info_subscribe_input:focus {
+        border: 1px #363838 solid; }
+    .Contact_info_subscribe_btn {
+      background-color: #363838;
+      color: white;
+      padding: 10px 60px;
+      border: 2px #363838 solid;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: .2s;
+      font-weight: 700; }
+      .Contact_info_subscribe_btn:hover {
+        box-shadow: 0 0 15px #363838;
+        transition: .2s; }
+  .Contact_from_input {
+    display: grid;
+    width: 830px; }
+    .Contact_from_input_label {
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+    .Contact_from_input_text {
+      border: 1px grey solid;
+      border-radius: 20px;
+      width: 825px;
+      height: 125px;
+      padding: 15px 25px 40px 20px;
+      font-size: 16px;
+      margin: 10px 0; }
+      .Contact_from_input_text:focus {
+        color: #363838;
+        border: none; }
+    .Contact_from_input_info {
+      border: 1px grey solid;
+      border-radius: 20px;
+      width: 407px;
+      padding: 10px 15px; }
+      .Contact_from_input_info:focus {
+        color: #363838;
+        border: none; }
+    .Contact_from_input_submit {
+      color: white;
+      background-color: #363838;
+      font-size: 16px;
+      padding: 10px 60px;
+      border: #363838 1px solid;
+      border-radius: 20px;
+      font-weight: 600; }
+      .Contact_from_input_submit:hover {
+        box-shadow: 0 0 15px #363838;
+        transition: .2s;
+        cursor: pointer; }
+  .Contact_social {
+    display: flex;
+    align-items: center; }
+    .Contact_social_content {
+      display: flex; }
+    .Contact_social_block {
+      display: flex;
+      align-items: center;
+      margin: 20px 40px 20px 0; }
+    .Contact_social_link {
+      text-decoration: none;
+      color: #707070;
+      line-height: 35px;
+      padding-left: 10px;
+      font-weight: 700;
+      transition: .2s; }
+    .Contact_social_svg {
+      width: 15px;
+      height: 15px; }
 
-.details_inner {
-  background: url("/image/about/chair_bg.jpg") no-repeat bottom;
-  display: flex; }
-.details_main {
-  max-width: 825px;
-  margin: 0 auto; }
-.details_block_title {
-  font-size: 36px;
-  margin-bottom: 19px;
-  padding-bottom: 19px;
+textarea {
+  resize: none; }
+
+.map {
   position: relative; }
-  .details_block_title::after {
-    background: #979797;
-    width: 200px;
-    height: 2px;
-    content: "";
-    bottom: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    border-radius: 1px; }
-.details_block_text {
-  line-height: 1.7; }
-.details_graphic {
-  margin: 30px 0; }
-  .details_graphic_content {
+  .map_frame {
     display: flex;
-    justify-content: space-between; }
-    .details_graphic_content_title {
-      margin-bottom: 36px;
-      padding-bottom: 16px;
-      position: relative; }
-      .details_graphic_content_title::before {
-        background: #ffff;
-        width: 823px;
-        height: 2px;
-        content: "";
-        bottom: 0;
-        left: 0;
-        right: 0;
-        position: absolute;
-        border-radius: 1px; }
-
-#details_line_80::after {
-  background: #363838;
-  width: 700px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-#details_line_70::after {
-  background: #363838;
-  width: 560px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-#details_line_75::after {
-  background: #363838;
-  width: 640px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-#details_line_40::after {
-  background: #363838;
-  width: 300px;
-  height: 2px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
-  border-radius: 1px; }
-
-.partners {
-  padding: 10px 0; }
-  .partners_block {
-    display: flex;
-    align-items: center;
     justify-content: center; }
-    .partners_block_img {
-      margin: 0 34px; }
 
-.furniture_content {
-  display: flex;
-  margin: 80px 0 100px;
-  max-width: 1920px;
-  justify-content: center; }
+.swiper-slide {
+  display: flex; }
+
+.furniture_slider {
+  margin: 60px 28px; }
+  .furniture_slider_block {
+    margin-bottom: 35px; }
+  .furniture_slider_img {
+    margin: 0 3px; }
 .furniture_white {
   transition: .9s;
   left: 0;
@@ -268,7 +232,7 @@ header {
   width: 100%;
   height: 100%; }
 .furniture_img_block {
-  margin: 0 10px;
+  margin: 0 5px;
   cursor: pointer;
   position: relative; }
 .furniture_img_hover {
@@ -281,22 +245,8 @@ header {
   text-align: center;
   position: absolute; }
 .furniture_img_title {
-  font-size: 20px;
-  padding-bottom: 19px;
-  margin-bottom: 19px;
+  font-size: 16px;
   position: relative; }
-.furniture_img_title::after {
-  background: grey;
-  width: 60%;
-  margin: 0 auto;
-  height: 1px;
-  content: "";
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute; }
-.furniture_img_text {
-  font-size: 14px; }
 
 .furniture_img_block:hover .furniture_white {
   display: block;
@@ -421,4 +371,29 @@ header {
   .youtube:hover .youtube_svg {
     color: red; }
   .youtube:hover #youtube {
+    fill: red; }
+
+.facebook {
+  transition: all; }
+  .facebook:hover #Contact_facebook {
+    fill: dodgerblue; }
+
+.inst {
+  transition: all; }
+  .inst:hover #Contact_inst {
+    fill: #b92fc2; }
+
+.pinterest {
+  transition: all; }
+  .pinterest:hover #Contact_pinterest {
+    fill: red; }
+
+.whatsapp {
+  transition: all; }
+  .whatsapp:hover #Contact_whatsapp {
+    fill: #1db41d; }
+
+.youtube {
+  transition: all; }
+  .youtube:hover #Contact_youtube {
     fill: red; }
