--- a/Style/Contact/Contact.scss
+++ b/Style/Contact/Contact.scss
@@ -3,7 +3,6 @@ $contentColor: #707070;
 
 $boldText: Montserrat, sans-serif;
 
-
 ul {
   padding: 0;
 }
@@ -18,7 +17,6 @@ li::marker {
     margin: 0;
   }
 }
-
 
 #web-active:after {
   transform: scale(1, 1)
@@ -44,7 +42,6 @@ body{
     margin: 0 auto;
   }
 }
-
 
 header {
   padding: 20px 0;
@@ -97,7 +94,11 @@ header {
     cursor: pointer;
   }
 }
+
 .breadcrumbs {
+  position: absolute;
+  opacity: .5;
+  top: 0;
   width: 100%;
   font-size: 14px;
   background: #f2f2f2;
@@ -118,57 +119,256 @@ header {
 
 
 
-.work {
-  padding: 60px 0;
-  &_nav {
-    justify-content: center;
-    align-items: center;
-    margin: 40px 0;
-    display: flex;
-    &_link {
-      opacity: .6;
-      color: $mainColor;
-      border: $mainColor solid 1px;
-      border-radius: 18px;
-      padding: 8px 16px;
-      margin: 0 12px;
-      font-size: 14px;
-      background-color: transparent;
-      cursor: pointer;
+
+.Contact {
+  margin: 50px 0 60px;
+
+  &_title {
+    font-size: 36px;
+    position: relative;
+    padding-bottom: 19px;
+    margin-bottom: 19px;
+
+    &::after {
+      content: "";
+      width: 200px;
+      height: 2px;
+      background-color: grey;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+  }
+  &_content {
+    margin-left: 280px;
+  }
+  &_text {
+    color: #A1A1A1;
+    line-height: 1.7;
+  }
+
+  &_info {
+
+    &_block {
+      margin: 20px 0;
+    }
+
+    &_mail {
+      margin: 20px 0;
       transition: .2s;
+      display: flex;
+      color: $mainColor;
+      font-family: $boldText;
+      text-decoration: none;
       &:hover {
-        opacity: 1;
         transition: .2s;
-        border: #FFEF35 1px solid;
-        background-color: #FFEF35;
+        color: grey;
       }
-      &.active {
-        transition: .5s;
-        opacity: 1;
-        border: #FFEF35;
-        background-color: #FFEF35;
+
+      &_text {
+        padding-left: 15px;
+      }
+    }
+
+    &_subscribe {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+
+      &_input {
+        padding: 10px 120px 10px 20px;
+        background-color: transparent;
+        border: 1px $mainColor solid;
+        border-radius: 15px;
+        &:focus {
+          border: 1px $mainColor solid;
+        }
+      }
+      &_btn {
+        background-color: $mainColor;
+        color: white;
+        padding: 10px 60px;
+        border: 2px $mainColor solid;
+        border-radius: 20px;
+        cursor: pointer;
+        transition: .2s;
+        font-weight: 700;
+        &:hover {
+          box-shadow: 0 0 15px $mainColor;
+          transition: .2s;
+        }
       }
     }
   }
-  &_container {
+
+  &_from {
+
+
+
+    &_input {
+      display: grid;
+      width: 830px;
+
+      &_label {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      &_text {
+        border: 1px grey solid;
+        border-radius: 20px;
+        width: 825px;
+        height: 125px;
+        padding: 15px 25px 40px 20px;
+        font-size: 16px;
+        margin: 10px 0;
+        &:focus {
+          color: $mainColor;
+          border: none;
+        }
+      }
+      &_info {
+        border: 1px grey solid;
+        border-radius: 20px;
+        width: 407px;
+        padding: 10px 15px;
+        &:focus {
+          color: $mainColor;
+          border: none;
+        }
+      }
+      &_submit {
+        color: white;
+        background-color: $mainColor;
+        font-size: 16px;
+        padding: 10px 60px;
+        border: $mainColor 1px solid;
+        border-radius: 20px;
+        font-weight: 600;
+        &:hover {
+          box-shadow: 0 0 15px $mainColor;
+          transition: .2s;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+
+
+
+
+
+
+  &_social {
     display: flex;
-  }
-
-  &_block {
-    display: none;
     align-items: center;
-    justify-content: center;
-    &.active {
-      display: block;
+
+    &_content {
+      display: flex;
+    }
+    &_block {
+      display: flex;
+      align-items: center;
+      margin: 20px 40px 20px 0;
+    }
+    &_link {
+      text-decoration: none;
+      color: $contentColor;
+      line-height: 35px;
+      padding-left: 10px;
+      font-weight: 700;
+      transition: .2s;
+    }
+    &_svg {
+      width: 15px;
+      height: 15px;
     }
   }
+}
+textarea {
+  resize: none;
+}
 
-  &_img {
-    margin: 10px;
+
+
+.map {
+  position: relative;
+  &_frame {
+    display: flex;
+    justify-content: center;
   }
-  &_small_block {
-    display: grid;
-    grid-template-columns: auto auto;
+}
+.swiper-slide {
+  display: flex;
+}
+
+.furniture {
+
+
+  &_slider {
+    margin: 60px 28px;
+
+    &_block {
+      margin-bottom: 35px;
+    }
+
+    &_img {
+      margin: 0 3px;
+    }
+
+
+  }
+
+
+  &_white{
+    transition: .9s;
+    left: 0;
+    top: 0;
+    position: absolute;
+    background-color: white;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+
+  }
+  &_img {
+    &_block {
+      margin: 0 5px;
+      cursor: pointer;
+      position: relative;
+    }
+    &_hover {
+      opacity: 0;
+      transition: .5s;
+      width: 100%;
+      left: 0;
+      top: 40%;
+      justify-content: center;
+      text-align: center;
+      position: absolute;
+    }
+    &_title {
+      font-size: 16px;
+      position: relative;
+    }
+
+  }
+
+}
+
+
+.furniture_img_block:hover {
+  .furniture_white, {
+    display: block;
+    opacity: .6;
+    transition: .9s;
+  }
+  .furniture_img_hover {
+    display: block;
+    opacity: 1;
+    transition: .5s;
   }
 }
 
@@ -176,14 +376,34 @@ header {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .footer {
   text-align: center;
-
   &_content {
     background-color: #DFDFDF;
     padding: 60px 0 80px;
     text-align: left;
-
     &_inner {
       display: flex;
       justify-content: space-between;
@@ -191,20 +411,17 @@ header {
     }
   }
 
-  &_contact {
+  &_contact{
     max-width: 480px;
-
-    &_text {
+    &_text{
       margin: 15px 0;
     }
-
     &_mail {
       transition: .2s;
       display: flex;
       color: $mainColor;
       font-family: $boldText;
       text-decoration: none;
-
       &:hover {
         transition: .2s;
         color: white;
@@ -225,12 +442,10 @@ header {
         background-color: transparent;
         border: 1px $mainColor solid;
         border-radius: 15px;
-
         &:focus {
           border: 1px $mainColor solid;
         }
       }
-
       &_btn {
         background-color: $mainColor;
         color: white;
@@ -246,6 +461,7 @@ header {
         }
       }
     }
+
   }
 
 
@@ -253,13 +469,11 @@ header {
     display: flex;
 
     flex-direction: column;
-
     &_block {
       display: flex;
       align-items: center;
       margin: 2px 0;
     }
-
     &_link {
       text-decoration: none;
       color: $contentColor;
@@ -268,7 +482,6 @@ header {
       font-weight: 700;
       transition: .2s;
     }
-
     &_svg {
       width: 15px;
       height: 15px;
@@ -285,14 +498,12 @@ header {
       color: $contentColor;
       font-weight: 700;
       transition: .2s;
-
       &:hover {
         color: $mainColor;
         transition: .2s;
       }
     }
   }
-
 
 
   &_copyright {
@@ -347,3 +558,41 @@ header {
     fill: red;
   }
 }
+
+
+
+
+
+.facebook {
+  transition: all;
+  &:hover #Contact_facebook {
+    fill: dodgerblue;
+  }
+}
+.inst {
+  transition: all;
+  &:hover #Contact_inst {
+    fill: #b92fc2;
+  }
+}
+.pinterest {
+  transition: all;
+  &:hover #Contact_pinterest {
+    fill: red;
+  }
+}
+.whatsapp {
+  transition: all;
+  &:hover #Contact_whatsapp {
+    fill: #1db41d;
+  }
+}
+.youtube {
+  transition: all;
+  &:hover #Contact_youtube {
+    fill: red;
+  }
+}
+
+
+
