--- a/Style/Gallery/Gallery.css
+++ b/Style/Gallery/Gallery.css
@@ -1,3 +1,9 @@
+ul {
+  padding: 0; }
+
+li::marker {
+  content: ""; }
+
 * {
   box-sizing: border-box; }
   * h1, * h2, * h3, * h4, * p {
@@ -69,9 +75,16 @@ header {
     cursor: pointer; }
 
 .breadcrumbs {
+  width: 100%;
   font-size: 14px;
-  background: #f2f2f2;
-  padding: 14px 405px; }
+  background: #f2f2f2; }
+  .breadcrumbs_list {
+    display: flex;
+    padding: 4px 0; }
+  .breadcrumbs_link {
+    text-decoration: none;
+    color: #5A5A5A;
+    padding: 0 2px; }
 
 .work {
   padding: 60px 0; }
