--- a/Style/Home/Home.css
+++ b/Style/Home/Home.css
@@ -1,3 +1,9 @@
+ul {
+  padding: 0; }
+
+li::marker {
+  content: ""; }
+
 * {
   box-sizing: border-box; }
   * h1, * h2, * h3, * h4, * p {
@@ -245,7 +251,7 @@ header {
     bottom: -4px;
     width: 10px;
     height: 10px;
-    background: #363636;
+    background: #363838;
     position: absolute;
     border-radius: 5px; }
   .works_path_line::before {
